# controllers/SourcesService.js
@@ -1,0 +1,35 @@
+'use strict';
+
+exports.sourcesGET = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+  * name (String)
+  * type (String)
+  **/
+    var examples = {};
+    if(Object.keys(examples).length > 0) {
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
+  }
+  else {
+    res.end();
+  }
+  
+}
+
+exports.sourcesPOST = function(args, res, next) {
+  /**
+   * parameters expected in the args:
+  * source (InformationSourceRequest)
+  **/
+    var examples = {};
+    if(Object.keys(examples).length > 0) {
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(examples[Object.keys(examples)[0]] || {}, null, 2));
+  }
+  else {
+    res.end();
+  }
+  
+}
+
